rendered first question

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <button class="start-button">Start Quiz</button>
       </div>
     </header>
+    <div class="card">
+      <ul id="question-list"></ul>
+    </div>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
