validated the answer and added corresponding comment

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     </header>
     <div class="card">
       <ul id="question-list"></ul>
+      <div id="comment"></div>
     </div>
+
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
