changed styles of buttons

--- a/highscores.html
+++ b/highscores.html
@@ -11,8 +11,8 @@
     <div class="div-highscores">
       <h1 class="div-initials final-message">High Scores</h1>
       <ul id="highscores"></ul>
-      <a href="./index.html"><button>Go back</button></a>
-      <button id="clear" class="clear">Clear high scores</button>
+      <a href="./index.html"><button class="button-highscore">Go back</button></a>
+      <button id="button-clear" class="button-highscore">Clear high scores</button>
     </div>
     <script src="./assets/js/highscores.js"></script>
   </body>
