changed position and styles of elements

--- a/highscores.html
+++ b/highscores.html
@@ -8,12 +8,17 @@
     <title>Code Quiz</title>
   </head>
   <body>
+    <header>
+
+    </header>
+    <div class="div-score">
     <div class="div-highscores">
-      <h1 class="div-initials final-message">High Scores</h1>
+      <h1 class="div-initials highscore-position">High Scores</h1>
       <ul id="highscores"></ul>
       <a href="./index.html"><button class="button-highscore">Go back</button></a>
       <button id="button-clear" class="button-highscore">Clear high scores</button>
     </div>
+  </div>
     <script src="./assets/js/highscores.js"></script>
   </body>
 </html>
