--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="quiz-heading">
       <h1>Coding Quiz Challenge</h1>
       <p>
-        Try to answer the following code related questions within the time
+        Try to answer the following code-related questions within the time
         limit. Keep in mind that incorrect answers will penalize your
         score/time by 15 seconds.
       </p>
